Remove unneeded closing parenthesis.

--- a/config/core/resources/cloudstoragesource.gofmt.yaml
+++ b/config/core/resources/cloudstoragesource.gofmt.yaml
@@ -87,6 +87,6 @@ spec:
         status:
           type: object
           properties:
-            {{ replace_with 12 "pubsub_status" }}
+            {{- replace_with 12 "pubsub_status" }}
             notificationId:
               type: string
