--- a/hack/crdgeneration/snippets/pubsub_spec.yaml
+++ b/hack/crdgeneration/snippets/pubsub_spec.yaml
@@ -6,7 +6,7 @@ secret:
     Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the
     Subscription, only to poll it. The value of the secret entry must be a service account key in
     the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).
-    Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+    Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'.
   properties:
     name:
       type: string
