--- a/config/core/resources/cloudbuildsource.yaml
+++ b/config/core/resources/cloudbuildsource.yaml
@@ -106,14 +106,14 @@ spec:
               description: >
                 GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
                 account must be a valid Google service account (see
-                https://cloud.google.com/iam/docs/service-accounts)."
+                https://cloud.google.com/iam/docs/service-accounts).
             secret:
               type: object
               description: >
                 Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the
                 Subscription, only to poll it. The value of the secret entry must be a service account key in
                 the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).
-                Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
+                Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'.
               properties:
                 name:
                   type: string
@@ -143,7 +143,7 @@ spec:
                 type: object
                 properties:
                   lastTransitionTime:
-                    # we use a string in the stored object but a wrapper object at runtime.
+                    # We use a string in the stored object but a wrapper object at runtime.
                     type: string
                   message:
                     type: string
