Storage schema is an object.

--- a/config/core/resources/cloudstoragesource.gofmt.yaml
+++ b/config/core/resources/cloudstoragesource.gofmt.yaml
@@ -51,6 +51,7 @@ spec:
       storage: true
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         spec:
           type: object
