--- a/config/core/resources/cloudstoragesource.yaml
+++ b/config/core/resources/cloudstoragesource.yaml
@@ -60,6 +60,7 @@ spec:
       storage: true
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         spec:
           type: object
