--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,12 +39,12 @@ required = [
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/eventing"
-  branch = "master"
+  branch = "release-0.14"
 
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/serving"
-  branch = "master"
+  branch = "release-0.14"
 
 [[override]]
   name = "go.uber.org/zap"
