Point dependencies back to master branches

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,22 +29,22 @@ required = [
 # Our master branch tracks knative/pkg master or a release.
 [[override]]
   name = "knative.dev/pkg"
-  branch = "release-0.14"
+  branch = "master"
 
 # Our master branch tracks knative/test-infra master or a release.
 [[override]]
   name = "knative.dev/test-infra"
-  branch = "release-0.14"
+  branch = "master"
 
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/eventing"
-  branch = "release-0.14"
+  branch = "master"
 
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/serving"
-  branch = "release-0.14"
+  branch = "master"
 
 [[override]]
   name = "go.uber.org/zap"
