--- a/config/core/services/broker.yaml
+++ b/config/core/services/broker.yaml
@@ -12,43 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+apiVersion: v1
+kind: Service
 metadata:
-  name: cloud-run-events-controller
+  name: broker-ingress
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
-rules:
-- apiGroups:
-    - ""
-  resources:
-    - secrets
-    - configmaps
-  verbs: &everything
-    - get
-    - list
-    - watch
-    - create
-    - update
-    - patch
-    - delete
-
----
-# Role for GCP broker data plane.
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: cloud-run-events-broker
-  namespace: cloud-run-events
-  labels:
-    events.cloud.google.com/release: devel
-rules:
-- apiGroups:
-    - ""
-  resources:
-    - configmaps
-  verbs:
-    - get
-    - list
-    - watch
+spec:
+  selector:
+    app: cloud-run-events
+    role: broker-ingress
+  ports:
+    - name: ingress
+      port: 80
+      protocol: TCP
+      targetPort: 8080
