--- a/config/core/deployments/broker.yaml
+++ b/config/core/deployments/broker.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# TODO(https://github.com/google/knative-gcp/issues/882) Support readiness/liveness probes.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -45,6 +46,9 @@ spec:
           requests:
             cpu: 100m
             memory: 100Mi
+        ports:
+        - name: http
+          containerPort: 8080
       volumes:
       - configMap:
           name: broker-targets
