--- a/config/core/services/broker.yaml
+++ b/config/core/services/broker.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -24,7 +24,7 @@ spec:
     app: cloud-run-events
     role: broker-ingress
   ports:
-    - name: ingress
+    - name: http
       port: 80
       protocol: TCP
       targetPort: 8080
