Refactor broker handler pool testing

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@
 /test/** coverage-excluded=true
 /cmd/**/main.go coverage-excluded=true
 /pkg/broker/config/targets.pb.go coverage-excluded=true
+/pkg/broker/handler/pool/testing/** coverage-excluded=true
